Added eraser and pencil, along with style of page

--- a/etch-sketch.html
+++ b/etch-sketch.html
@@ -7,6 +7,8 @@
       <link rel="stylesheet" href="./styles.css"/>
    </head>
    <body>
+      <header>Etch-A-Sketch</header>
+      <div id="settings"></div>
       <div id="container"></div>
    </body>
    <script src="C:\Users\Benen\Desktop\Odin Project\Etch-A-Sketch\etch-sketch.js"></script>
