fixed html name and file directory for javascript

--- a/index.html
+++ b/index.html
@@ -11,5 +11,5 @@
       <div id="settings"></div>
       <div id="container"></div>
    </body>
-   <script src="C:\Users\Benen\Desktop\Odin Project\Etch-A-Sketch\etch-sketch.js"></script>
+   <script src=".\etch-sketch.js"></script>
 </html>
